# agentic_bookkeeper

./: .env.example  .gitignore  .markdownlint.json  ACCOUNTING_FIX_SUMMARY.md  ACCOUNTING_TERMINOLOGY.md  BUG-004-FIX-SUMMARY.md  CATEGORY_FILTERING_FIX.md  CHANGELOG.md  CONTEXT.md  DASHBOARD_STATISTICS_FIX.md  ENV_SETUP_GUIDE.md  FIXES_COMPLETED.md  GUI_DOCUMENT_MONITOR_FIX.md  GUI_FIX_SUMMARY.md  GUI_INTEGRATION_FIXES.md  GUI_WIRING_AUDIT.md  LAUNCHER_GUIDE.md  LICENSE  LICENSE.md  MANIFEST.in  MONITOR_EXISTING_FILES_FIX.md  NULL_VALUE_FIX.md  PROJECT_STATUS.md  PROJECT_STATUS.md.backup  PROJECT_STATUS.md.backup_20251029_103450  README.md  RELEASE_NOTES.md  REPORT_GENERATION_DATE_FIX.md  REPORT_PREVIEW_STRUCTURE_FIX.md  SIMPLE_TAX_REPORTING_PLAN.md  SPRINT3_COMPLETION_REPORT.md  TASK_EXECUTION_REPORT.md  TAX_ACCOUNTING_IMPLEMENTATION_PLAN.md  TAX_REPORTING_IMPLEMENTATION_COMPLETE.md  TEST_CLI.md  THIRD_PARTY_LICENSES.md  VERSION_UPDATE_SUMMARY.md  XAI_GROK4_UPDATE.md  XAI_MODEL_UPDATE.md  XAI_TESTING_COMPLETE.md  (+25 more)
config/: categories_cra.json  categories_irs.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_LINUX.md  BUILD_WINDOWS.md  CONTRIBUTING.md  DEVELOPMENT.md  KNOWN_ISSUES.md  MARKETING_DOCUMENT.md  PERFORMANCE_METRICS.md  PRODUCT_PLAN.md  README.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  UAT_RESULTS.md  UAT_SCENARIOS.md  USER_GUIDE.md  USER_GUIDE.md.backup  agentic-bookkeeper-product-description.md
installer/: build_installer.bat  windows_installer.nsi
samples/: README.md
specs/: BUG-004-api-key-validation-incorrect-access.md  MASTER_PROJECT_SPEC.md  (+2 more)
(+161 files in other folders)
